# WSPRliteConfig

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: Findlibserialport.cmake
doc/: linux-serial.md
res/: wsprlite.rc  wsprlite.xcf
src/: wsprlite-config.cpp
src/common/: AsyncTask.cpp  AsyncTask.hpp  AsyncTaskRunner.cpp  AsyncTaskRunner.hpp  Device.cpp  Device.hpp  DeviceCommTask.cpp  DeviceCommTask.hpp  HexFile.cpp  HexFile.hpp  MathUtil.cpp  MathUtil.hpp  PaBias.cpp  PaBias.hpp  PaBiasData.csv  PaBiasData.inc  PaBiasData.sh  PaBias_impl.cpp  PaBias_impl.hpp  RandomFreqGenerator.cpp  RandomFreqGenerator.hpp  RelOps.hpp  Serial.cpp  Serial.hpp  StrUtil.cpp  StrUtil.hpp  Task_Connect.cpp  Task_Connect.hpp  Task_FactoryReset.cpp  Task_FactoryReset.hpp  Task_FirmwareUpdate.cpp  Task_FirmwareUpdate.hpp  Task_StatusCheck.cpp  Task_StatusCheck.hpp  Task_WSPRLoad.cpp  Task_WSPRLoad.hpp  Task_WSPRSave.cpp  Task_WSPRSave.hpp  Version.cpp  Version.hpp  (+12 more)
src/common/biasData/: gen.sh
src/common/biasData/csv/: classic-extra.csv  classic.csv  flexi-direct.csv  flexi-lpfkit-1.csv  flexi-lpfkit-10.csv  flexi-lpfkit-14.csv  flexi-lpfkit-18.csv  flexi-lpfkit-21.csv  flexi-lpfkit-24.csv  flexi-lpfkit-28.csv  flexi-lpfkit-3.csv  flexi-lpfkit-7.csv
src/common/biasData/inc/: classic.inc  flexi-direct.inc  flexi-lpfkit.inc
src/common/device/: DeviceMode.hpp  MsgType.hpp
src/common/freqData/: gen.sh
src/common/freqData/csv/: all.csv
src/common/freqData/inc/: all.inc
src/ui/: Box_WSPRSettings.cpp  Box_WSPRSettings.hpp  Ctl_BandSelect.cpp  Ctl_BandSelect.hpp  Ctl_BiasSelect.cpp  Ctl_BiasSelect.hpp  Ctl_OutputPowerSelect.cpp  Ctl_OutputPowerSelect.hpp  Ctl_ReportPowerSelect.cpp  Ctl_ReportPowerSelect.hpp  Dlg_FirmwareChoose.cpp  Dlg_FirmwareChoose.hpp  Dlg_TestRF.cpp  Dlg_TestRF.hpp  FirmwareUpdate.cpp  FirmwareUpdate.hpp  MaidenheadValidator.cpp  MaidenheadValidator.hpp  PortChoose.cpp  PortChoose.hpp  Timer.cpp  Timer.hpp
techdoc/: cfgvars.md  dxplorer.md  serial.md
tools/: timeslotgen.c
